--- a/.env_sample
+++ b/.env_sample
@@ -3,3 +3,9 @@ KICKTIPP_PASSWORD=
 
 # derive from url
 KICKTIPP_GROUP_ID=
+
+# one of
+# - difference-ratio
+# - coefficient
+# - one-to-win
+KICKTIPP_PREDICTION_STRATEGY=difference-ratio
